--- a/index.html
+++ b/index.html
@@ -116,23 +116,23 @@
     <button data-fancybox data-src="#animatedModal" class="none this"></button>
     <div class="wrapper-popup none" >
         <div id="animatedModal" class="none">
-            <div class="text1">Congratulations!</div>
-            <div class="text2">You win <span>100%</span> bonus up to <span>200 KR</span>!</span></div>
-            <div class="btn btn-1">SPIN</div>
+            <div class="text1">Gratulerer!</div>
+            <div class="text2">Du vinner <span>100%</span> bonus opptil <span>2000 KR</span>!</span></div>
+            <div class="btn btn-1">Snurre rundt</div>
         </div>
     </div>
     <button data-fancybox data-src="#animatedModal2" class="none this2"></button>
-    <div class="wrapper-popup none" >
+    <div class="wrapper-popup none">
         <div id="animatedModal2" >
             <div class="popupImg"><img src="img/5.png" alt=""></div>
-            <div class="text1">Wow! Your total bonus is <span>100%</span> up to <span>200 KR</span> + <span>100 FS</span>!</div>
-            <div class="text2"> Take it now and let’s fly into Kakadu island!</div>
-            <div class="btn btn-2">Get bonus</div>
+            <div class="text1">Wow! Din totale bonus er <span>100%</span> opptil <span>2000 KR</span> + <span>100 FS</span>!</div>
+            <div class="text2">Ta det nå og la oss fly inn til Kakadu-øya!</div>
+            <div class="btn btn-2">Få bonus</div>
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/fancybox.umd.js"></script>
-    <script src="js/app.js?v1.3"></script>
+    <script src="js/app.js?v1.4"></script>
 
 </body>
 </html>
