--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="wrapper-popup none" >
         <div id="animatedModal" class="none">
             <div class="text1">Gratulerer!</div>
-            <div class="text2">Du vinner <span>100%</span> bonus opptil <span>2000 KR</span>!</span></div>
+            <div class="text2">Du vinner <span>100 FS</span>! Du skal få mer!</div>
             <div class="btn btn-1">Snurre rundt</div>
         </div>
     </div>
